--- a/dashboard.html
+++ b/dashboard.html
@@ -208,7 +208,7 @@ body{font-family:'DM Sans',sans-serif;background:var(--off);color:var(--text);mi
         <div class="page-title">Dashboard</div>
       </div>
       <div class="topbar-right">
-        <span id="today-date" style="font-size:12px;color:var(--lmuted)"></span>
+        <span id="today-date" class="topbar-date" style="font-size:12px;color:var(--lmuted)"></span>
         <button class="btn btn-yellow" onclick="openModal('client')"><svg viewBox="0 0 24 24"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>Add Client</button>
       </div>
     </div>
